--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HIRELY</title>
   </head>
-  <body>
+  <body class="m-0 p-0 w-full overflow-x-hidden">
      
 
        <div id="root"></div>
