--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="vGGbicGmAfjyFWo2XaguP9VGmHJffwLV4vZWH9w6D6o" />
     <title>HIRELY</title>
   </head>
   <body class="m-0 p-0 w-full overflow-x-hidden">
